syntax = "proto3";
package hackathon;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

service HackathonService {
    // SaveMessage saves the given message into the database
    rpc SaveMessage(SaveMessageRequest) returns (SaveMessageResponse){}

    // GetMessages retrieves all message matching the provided request
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse){}
}

message Message {
    string text = 1;
    string user = 2;
}

/////////////////////////////////////////////////////////////////////
// SaveMessage
message SaveMessageRequest {
    repeated Message messages = 1;
}

message SaveMessageResponse {}

/////////////////////////////////////////////////////////////////////
// GetMessages
message GetMessagesRequest {}

message GetMessagesResponse {
    repeated Message messages = 2;
}
